openshift/hbase-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
  name: hbase-standalone
  labels:
    app: hbase-standalone
    app.kubernetes.io/component: hbase-standalone
    app.kubernetes.io/instance: hbase-standalone
    app.kubernetes.io/part-of: hbase-standalone-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hbase-standalone
  template:
    metadata:
      labels:
        app: hbase-standalone
        deploymentconfig: hbase-standalone
    spec:
      volumes:
        - name: hbase-data-volume
          persistentVolumeClaim:
            claimName: hbase-data-claim
        - name: hbase-zk-volume
          persistentVolumeClaim:
            claimName: hbase-zk-claim
      containers:
        - name: hbase-standalone
          image: dmvolod/hbase-standalone:2.0.0
          ports:
            - containerPort: 16000
              protocol: TCP
            - containerPort: 16010
              protocol: TCP
            - containerPort: 16020
              protocol: TCP
            - containerPort: 16030
              protocol: TCP
            - containerPort: 2181
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: hbase-data-volume
              mountPath: /opt/data/hbase
            - name: hbase-zk-volume
              mountPath: /opt/data/zookeeper
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
